获取职称列表。

--- a/eteacher/WebContent/WEB-INF/css/base.css
+++ b/eteacher/WebContent/WEB-INF/css/base.css
@@ -251,3 +251,5 @@ table.altrowstable td {
 .evenrowcolor{
 	background-color:#fff;
 }
+
+.CustomAdd { background:orange; color:#fff; cursor:pointer;}
